--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,10 @@
 ﻿<html>
 <head>
-<title>WebSocketChat</title>
-<link type="text/css" href="common.css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <title>WebSocketChat</title>
+    <link type="text/css" href="common.css" rel="stylesheet">
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-    <script type="text/javascript">google.load("jquery", '1.4.2');</script>
+    <script type="text/javascript">google.load("jquery", '1.4');</script>
 	<script type="text/javascript" src="js/json2.js"></script>
     <script type="text/javascript" src="js/webcoket.js"></script>
 </head>
